k8s/trackmyfit/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trackmyfit
spec:
  rules:
    - http:
        paths:
          - path: /api/activities/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: activities 
                port:
                  number: 3001
          - path: /api/auth/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth 
                port:
                  number: 3002
           # Frontend - catch all routes not matching API
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend
                port:
                  number: 3000
